# GDWT-Helper

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  logo.xcf  mod.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: multi-platform.yml
src/: main.cpp
src/core/: State.hpp  Utils.cpp  Utils.hpp
src/hooks/: LevelInfoLayer.cpp  PlayLayer.cpp
src/ui/: GDWTPopup.cpp  GDWTPopup.hpp  GDWTSessionViewer.cpp  GDWTSessionViewer.hpp  GDWTStatsPopup.cpp  GDWTStatsPopup.hpp
